# imaurer.github.io

./: .gitignore  404.html  CLAUDE.md  CNAME  LICENSE  Makefile  README.md  feed_json_created.json  feed_json_updated.json  feed_rss_created.xml  feed_rss_updated.xml  index.html  mkdocs.yml  pyproject.toml  requirements-doc.txt  sitemap.xml
.claude/: settings.local.json
.github/workflows/: ci.yml  ci2.yml
about/: index.html
blog/: index.html
blog/posts/2023-05-18-the-answer-is-the-easy-part/: index.html
blog/posts/2023-07-14-llms-just-dont-understand/: index.html
blog/posts/2023-09-06-llama-cpp-grammars/: index.html
blog/posts/2024-01-08-what-is-a-custom-gpt/: index.html
css/: custom.css
docs/: about.md  index.md  llama-cpp-grammars.md  llms-just-dont-understand-2.md  the-answer-is-the-easy-part.md  what-is-a-custom-gpt.md
docs/blog/: .authors.yml
docs/blog/posts/: 2023-05-18-the-answer-is-the-easy-part.md  2023-07-14-llms-just-dont-understand.md  2023-09-06-llama-cpp-grammars.md  2024-01-08-what-is-a-custom-gpt.md  (+4 more)
docs/stylesheets/: extra.css
llama-cpp-grammars/: index.html
llms-just-dont-understand-2/: index.html
overrides/partials/: header.html
scripts/: new_post.py
search/: search_index.json
site/: 404.html  index.html  sitemap.xml
site/llama-cpp-grammars/: index.html
site/llms-just-dont-understand-2/: index.html
site/search/: search_index.json
site/the-answer-is-the-easy-part/: index.html
site/what-is-a-custom-gpt/: index.html
the-answer-is-the-easy-part/: index.html
what-is-a-custom-gpt/: index.html
